# SPDX-FileCopyrightText: 2025 Tom Hubrecht <github@mail.hubrecht.ovh>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arkheon"
dynamic = ["version"]
authors = [
  { name="Tom Hubrecht", email="tom@hubrecht.ovh" },
  { name="Raito Bezarius", email="masterancpp@gmail.com" },
  { name="sinavir", email="sinavir@sinavir.fr" },
]
description = "Track your Nix closures over time"
license = {file = "LICENSES/EUPL-1.2.txt"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Framework :: FastAPI",
]
dependencies = [
  "sqlalchemy>=2.0.21",
  "pydantic>=1.10.12",
  "fastapi>=0.103.1",
]

[project.urls]
Homepage = "https://github.com/RaitoBezarius/arkheon"
Issues = "https://github.com/RaitoBezarius/arkheon/issues"

[tool.isort]
profile = "black"

[tool.setuptools.dynamic]
version = {attr = "arkheon.__VERSION__"}
